public interface Duck {
    void quack();
    void swim();
}
