public class RegularDuck implements Duck {
    @Override
    public void quack() {
        // Implementation for regular duck quacking
    }

    @Override
    public void swim() {
        // Implementation for regular duck swimming
    }
}
